# aqua

./: BUILD-INSTR  Cargo.toml  LICENSE  README.mdown  sample.env
aqua-query/: Cargo.toml  README.mdown
aqua-query/src/: ext.rs  lib.rs
aqua-web/: Cargo.toml
aqua-web/src/: lib.rs  plug.rs  result.rs
aqua-web/src/mw/: forms.rs  mod.rs  regexp.rs  route.rs  router.rs
aqua-web/src/util/: mod.rs
migrations/20170203010113_create_entries/: up.sql
migrations/20170205024638_unique_entries_digest/: down.sql  up.sql
migrations/20170205025204_tags/: up.sql
migrations/20170205025608_join_entries_tags/: down.sql  up.sql
migrations/20170208195620_alter_key_entries_tags/: down.sql  up.sql
migrations/20170226144358_AddOrphanFlagToEntries/: down.sql  up.sql
priv/templates/dash/: index.hbs  index.html.hbs  list.hbs  list.html.hbs
priv/templates/layouts/: main.html.hbs
priv/templates/tag/: _panel.hbs
src/: lib.rs  main.rs
src/controllers/: dash.rs  entries.rs  mod.rs  prelude.rs
src/models/: entry.rs  entry_tag.rs  mod.rs  tag.rs
src/util/: db.rs  mod.rs  template.rs  timer.rs  try_file.rs
src/util/processing/: image_detector.rs  mod.rs  video_detector.rs
src/views/: mod.rs
static/css/: main.css
static/js/: app.js
