[package]
name = "aqua"
version = "0.1.0"
authors = ["Robbie Straw <drbawb@fatalsyntax.com>"]

[dependencies]
aqua-web = { version = "0.1.0", path = "aqua-web" }
conduit = "*"
diesel = { version = "0.10", features = ["postgres"] }
diesel_codegen = { version = "0.10", features = ["postgres"] }
dotenv = "0.8"
env_logger = "0.3"
log = "0.3"
handlebars = { version = "*", features = ["serde_type"] }
mime = "*"
mime_guess = "*"
r2d2 = "*"
r2d2-diesel = "*"
rust-crypto = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
time = "0.1"

[dependencies.conduit-hyper]
git = "https://github.com/sfackler/conduit-hyper"
